[tool.poetry]
name = "meshchat"
version = "0.1.0"
description = "A mesh networking chat application"
authors = ["Cristian Rubio <cristianrubioa@gmail.com>"]
readme = "README.md"
license = "LICENSE"
packages = [{include = "chatserver"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.0"
aiolimiter = "^1.1.0"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
