[tool.poetry]
name = "chatserver"
version = "0.1.0"
description = "Terminal-based chat server with asyncio"
authors = ["Cristian Rubio <cristianrubioa@gmail.com>"]
readme = "README.md"
packages = [{include = "chatserver"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.5"
rich = "^13.7.0"
aiolimiter = "^1.1.0"
pydantic-settings = "^2.2.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.2.0"
pytest-cov = "^7.0.0"

[tool.poetry.scripts]
meshchat = "chatserver.main:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["test"]

[tool.coverage.run]
omit = [
    "test/*",
    "chatserver/main.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
